tests/ui/where-clauses/where-for-self-2.stderr
error: implementation of `Bar` is not general enough
  --> $DIR/where-for-self-2.rs:23:5
   |
LL |     foo(&X);
   |     ^^^^^^^ implementation of `Bar` is not general enough
   |
   = note: `&'0 u32` must implement `Bar`, for any lifetime `'0`...
   = note: ...but `Bar` is actually implemented for the type `&'static u32`

error: aborting due to 1 previous error

